I've largely modified the ex 93 because i've read again the README and I've seen that something could be enhanced